added edit form functionality

--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -314,6 +314,7 @@
         <div layout="row" class="footerBtns" layout-align="start center">
             <md-button class="md-raised md-back" ng-click="vm.backStep()">Back</md-button>
             <md-button class="md-raised md-success" ng-click="vm.nextStep()">Next</md-button>
+            <md-button class="md-raised md-edit-form" ng-click="vm.editForm()">Edit Form</md-button>
         </div>
     </footer>
 </div>
