--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -27,9 +27,10 @@ footer {
   width:100%;
 }
 .md-raised.md-success {
-	color: white;
+	color: #ffffff;
 	font-family: Lato;
 	margin-left: 0px;
+	margin-right: 0px;
 	border-radius: 1px;
 	background: #3bada5;
 }
@@ -40,11 +41,25 @@ footer {
 	font-family: Lato;
 	background: #4f6379;
 }
-.md-button.md-raised.md-back:not([disabled]):hover {
+.md-raised.md-edit-form {
+	color: #9da9b5;
+	margin-right: 0px;
+	border-radius: 1px;
+	font-family: Lato;
+	margin-left: 0px;
+	background: #ecf0f1;
+	padding-left: 20px;
+    padding-right: 20px;
+	&:hover {
+		color: #9da9b5;
+		background: #ecf0f1;
+	}
+}
+.md-raised.md-back:not([disabled]):hover {
 	color: white;
 	background: #4f6379;
 }
-.md-button.md-raised.md-success:not([disabled]):hover {
+.md-raised.md-success:not([disabled]):hover {
     background-color: #3bada5;
 }
 .md-stepper-indicator .md-stepper-number, .md-stepper-indicator.md-completed .md-stepper-number {
