book appointment popup

--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -130,6 +130,11 @@ md-input-container.md-block {
 	width: 100%;
 }
 
+md-event-calendar .md-event-calendar-cell-event.book-appointment {
+	background-color: #3aafa5;
+	color: white;
+}
+
 .partnerBox {
 	width: 200px;
 	height: 100px;
