--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -42,7 +42,7 @@
         </md-step>
         <md-step md-label="Documents">
             <md-step-body>
-                <div class="flex-wrapper" style="height: calc(100vh - 90px);margin-bottom: -90px;">
+                <div class="flex-wrapper" style="height: calc(100vh - 90px); margin-bottom: -90px; margin-top: 20px;">
                 <div ng-repeat="document in ::vm.documents">
                     <document-pane style="float: left;" document="document"></document-pane>
                 </div>  
