Adding search and flag dropdown capability

--- a/src/app/components/main/toolbar/toolbar.html
+++ b/src/app/components/main/toolbar/toolbar.html
@@ -2,10 +2,25 @@
 	<div class="display-area">
 		<img ng-click="sideNavCollapsed=!sideNavCollapsed" src="../../../../assets/images/hide-bar.png" style="padding: 0 13px;cursor: pointer;outline: none;">	
 		<div class="grow">{{breadCrumb}}</div>
-		<img src="../../../../assets/images/search.png" style="padding: 0 13px;">		
-		<img src="../../../../assets/images/flag.png" style="padding: 0 13px;">
-		<div style="font-size: 14px;">SG</div>		
-		<img src="../../../../assets/images/dropdown.png" style="padding: 0 13px;">		
+		 <md-input-container md-no-float class="md-block">
+          <input style="position: relative;top:20px; left:30px;font-size: 12px;" ng-model="vm.search" placeholder="Search here">
+        </md-input-container>
+		<img src="../../../../assets/images/search.png" style="padding: 0 13px;cursor: pointer;z-index: 1">
+		<div class="flag-dropdown">
+			<img ng-src="{{vm.activeFlag.url}}" style="padding: 0 13px; height: 32px;">
+			<div style="font-size: 14px;">{{vm.activeFlag.country}}</div>		
+			<img src="../../../../assets/images/dropdown.png" style="padding: 0 13px;cursor: pointer;">
+			<div class="flag-dropdown-overlay" 
+				 ng-click="vm.flagShow=!vm.flagShow"  
+				 outside-id="{{parameter.id}}" outside-click="vm.flagClose()">
+			</div>
+			<div class="flag-dropdown-container" ng-show="vm.flagShow">
+				<div ng-repeat="flag in vm.flags" ng-click="vm.selectFlag(flag)" class="flag-item">
+					<img ng-src="{{flag.url}}">
+					<div style="font-size: 14px;">{{flag.country}}</div>
+				</div>
+			</div>
+		</div>		
 		<img src="../../../../assets/images/heartbeat.png" style="padding: 0 13px;">		
 
 	</div>
