Fixing paths for images

--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -4,39 +4,39 @@
             <md-step-body layout="row" layout-wrap>
                 <h3 class="partnersHeader">Premium Partners</h3>
                 <div class="partnerLogo">
-                    <img class="premiereIcon" src="../../../../assets/images/premiere.png"/>
-                    <center><img src="../../../../assets/images/partnerLogos/posb.png"/></center>
+                    <img class="premiereIcon" src="/assets/images/premiere.png"/>
+                    <center><img src="/assets/images/partnerLogos/posb.png"/></center>
                 </div>
                 <div class="partnerLogo">
-                    <img class="premiereIcon" src="../../../../assets/images/premiere.png"/>
-                    <center><img src="../../../../assets/images/partnerLogos/dbs.png"/></center>
+                    <img class="premiereIcon" src="/assets/images/premiere.png"/>
+                    <center><img src="/assets/images/partnerLogos/dbs.png"/></center>
                 </div>
                 <div class="partnerLogo">
-                    <img class="premiereIcon" src="../../../../assets/images/premiere.png"/>
-                    <center><img src="../../../../assets/images/partnerLogos/uob.png"/></center>
+                    <img class="premiereIcon" src="/assets/images/premiere.png"/>
+                    <center><img src="/assets/images/partnerLogos/uob.png"/></center>
                 </div>
                 <div class="partnerLogo">
-                    <img class="premiereIcon" src="../../../../assets/images/premiere.png"/>
-                    <center><img src="../../../../assets/images/partnerLogos/icici.png"/></center>
+                    <img class="premiereIcon" src="/assets/images/premiere.png"/>
+                    <center><img src="/assets/images/partnerLogos/icici.png"/></center>
                 </div>
                 <h3 class="partnersHeader">All Partners</h3>
                 <div class="partnerLogo">
-                    <center><img src="../../../../assets/images/partnerLogos/citibank.png"/></center>
+                    <center><img src="/assets/images/partnerLogos/citibank.png"/></center>
                 </div>
                 <div class="partnerLogo">
-                    <center><img src="../../../../assets/images/partnerLogos/boa.png"/></center>
+                    <center><img src="/assets/images/partnerLogos/boa.png"/></center>
                 </div>
                 <div class="partnerLogo">
-                    <center><img src="../../../../assets/images/partnerLogos/schartered.png"/></center>
+                    <center><img src="/assets/images/partnerLogos/schartered.png"/></center>
                 </div>
                 <div class="partnerLogo">
-                    <center><img src="../../../../assets/images/partnerLogos/axisbank.png"/></center>
+                    <center><img src="/assets/images/partnerLogos/axisbank.png"/></center>
                 </div>
                 <div class="partnerLogo">
-                    <center><img src="../../../../assets/images/partnerLogos/hdfc.png"/></center>
+                    <center><img src="/assets/images/partnerLogos/hdfc.png"/></center>
                 </div>
                 <div class="partnerLogo">
-                    <center><img src="../../../../assets/images/partnerLogos/uob.png"/></center>
+                    <center><img src="/assets/images/partnerLogos/uob.png"/></center>
                 </div>
             </md-step-body>
         </md-step>
