--- a/src/app/components/main/toolbar/toolbar.html
+++ b/src/app/components/main/toolbar/toolbar.html
@@ -1,15 +1,15 @@
 <div class="toolbar">
 	<div class="display-area">
-		<img ng-click="sideNavCollapsed=!sideNavCollapsed" src="../../../../assets/images/hide-bar.png" style="padding: 0 13px;cursor: pointer;outline: none;">	
+		<img ng-click="sideNavCollapsed=!sideNavCollapsed" src="/assets/images/hide-bar.png" style="padding: 0 13px;cursor: pointer;outline: none;">	
 		<div class="grow">{{breadCrumb}}</div>
 		 <md-input-container md-no-float class="md-block">
           <input style="position: relative;top:20px; left:30px;font-size: 12px;" ng-model="vm.search" placeholder="Search here">
         </md-input-container>
-		<img src="../../../../assets/images/search.png" style="padding: 0 13px;cursor: pointer;z-index: 1">
+		<img src="/assets/images/search.png" style="padding: 0 13px;cursor: pointer;z-index: 1">
 		<div class="flag-dropdown">
 			<img ng-src="{{vm.activeFlag.url}}" style="padding: 0 13px; height: 32px;">
 			<div style="font-size: 14px;">{{vm.activeFlag.country}}</div>		
-			<img src="../../../../assets/images/dropdown.png" style="padding: 0 13px;cursor: pointer;">
+			<img src="/assets/images/dropdown.png" style="padding: 0 13px;cursor: pointer;">
 			<div class="flag-dropdown-overlay" 
 				 ng-click="vm.flagShow=!vm.flagShow"  
 				 outside-id="{{parameter.id}}" outside-click="vm.flagClose()">
@@ -21,14 +21,14 @@
 				</div>
 			</div>
 		</div>		
-		<img src="../../../../assets/images/heartbeat.png" style="padding: 0 13px;">		
+		<img src="/assets/images/heartbeat.png" style="padding: 0 13px;">		
 
 	</div>
 	<div class="avatar-area">
 		<div>{{vm.displayName}}</div>
-		<img src="../../../../assets/images/avatar.png" style="padding: 0 13px;">	
+		<img src="/assets/images/avatar.png" style="padding: 0 13px;">	
 		<a ng-click="vm.signOut()" style="cursor: pointer;" title="Logout">
-			<img style="height: 35px;" src="../../../../assets/images/logout.svg" alt="Logout">
+			<img style="height: 35px;" src="/assets/images/logout.svg" alt="Logout">
 		</a>	
 	</div>
 </div>
