--- a/src/app/components/messages/messages.html
+++ b/src/app/components/messages/messages.html
@@ -16,7 +16,7 @@
 	</div>
 	<div layout="row" class="email-reply" ng-show="vm.currentMessage" flex style="min-height: 700px;">
 		<div class="email-icon">
-			<!-- <img src="../../../../assets/images/1024-px-standard-charteredsvg.png"></img> -->
+			<!-- <img src="/assets/images/1024-px-standard-charteredsvg.png"></img> -->
 		</div>
 		<div class="email-content">
 			<div>
