--- a/src/app/components/main/dashboard/dashboard.html
+++ b/src/app/components/main/dashboard/dashboard.html
@@ -8,7 +8,7 @@
 					<div style="opacity: 0.4;padding: 4px; border-bottom: 1px dotted;">Oct 16</div>
 					<div style="font-size: 12px; opacity: 0.3;padding: 3px;">07:20 am</div>
 				</div>
-				<img style="height:50px; padding-left: 30px; padding-right: 20px;" src="../../../../assets/images/standard-chartered.png">
+				<img style="height:50px; padding-left: 30px; padding-right: 20px;" src="/assets/images/standard-chartered.png">
 				<div class="detail">
 					<div style="font-size: 14px;margin-bottom: 3px;">Standard Chartered Bank</div>
 					<div style="margin-bottom: 17px;opacity: 0.4;">Meeting with Standard Chartered Bank</div>
@@ -24,7 +24,7 @@
 					<div style="opacity: 0.4;padding: 4px; border-bottom: 1px dotted;">Oct 16</div>
 					<div style="font-size: 12px; opacity: 0.3;padding: 3px;">08:20 am</div>
 				</div>
-				<img style="height:50px; padding-left: 30px; padding-right: 20px;" src="../../../../assets/images/bank-of-america.png">
+				<img style="height:50px; padding-left: 30px; padding-right: 20px;" src="/assets/images/bank-of-america.png">
 				<div class="detail">
 					<div style="font-size: 14px;margin-bottom: 3px;">Bank of America</div>
 					<div style="margin-bottom: 17px;opacity: 0.4;">Meeting with Bank of America</div>
@@ -37,7 +37,7 @@
 		<div class="messages">
 			<h2>New Messages</h2>
 			<div style="background-color: #f2f6f8;" class="message">
-				<img style="height:50px;padding-right: 20px;" src="../../../../assets/images/standard-chartered.png">
+				<img style="height:50px;padding-right: 20px;" src="/assets/images/standard-chartered.png">
 				<div class="detail">
 					<div style="font-size: 14px; margin-bottom: 10px;">Standard Chartered Bank</div>
 					<div style="opacity: 0.4;font-size: 14px; line-height: 25px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius tempor act incididunt ut labore et dolore magna enim ad ...</div>
@@ -45,13 +45,13 @@
 				<div class="time">
 					<div style="white-space: nowrap;padding-right: 10px">2hrs Ago</div>
 					<a ui-sref="main.messages" style="text-decoration: none;cursor: pointer;">
-						<img src="../../../../assets/images/open-message.png">					
+						<img src="/assets/images/open-message.png">					
 					</a>
 
 				</div>
 			</div>
 			<div class="message">
-				<img style="height:50px;padding-right: 20px;" src="../../../../assets/images/standard-chartered.png">
+				<img style="height:50px;padding-right: 20px;" src="/assets/images/standard-chartered.png">
 				<div class="detail">
 					<div style="font-size: 14px; margin-bottom: 10px;">Standard Chartered Bank</div>
 					<div style="opacity: 0.4;font-size: 14px; line-height: 25px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius tempor act incididunt ut labore et dolore magna enim ad ...</div>
@@ -59,13 +59,13 @@
 				<div class="time">
 					<div style="white-space: nowrap;padding-right: 10px">2hrs Ago</div>
 					<a ui-sref="main.messages" style="text-decoration: none;cursor: pointer;">
-						<img src="../../../../assets/images/open-message.png">					
+						<img src="/assets/images/open-message.png">					
 					</a>
 
 				</div>
 			</div>
 			<div class="message">
-				<img style="height:50px;padding-right: 20px;" src="../../../../assets/images/standard-chartered.png">
+				<img style="height:50px;padding-right: 20px;" src="/assets/images/standard-chartered.png">
 				<div class="detail">
 					<div style="font-size: 14px; margin-bottom: 10px;">Standard Chartered Bank</div>
 					<div style="opacity: 0.4;font-size: 14px; line-height: 25px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius tempor act incididunt ut labore et dolore magna enim ad ...</div>
@@ -73,7 +73,7 @@
 				<div class="time">
 					<div style="white-space: nowrap;padding-right: 10px">2hrs Ago</div>
 					<a ui-sref="main.messages" style="text-decoration: none;cursor: pointer;">
-						<img src="../../../../assets/images/open-message.png">					
+						<img src="/assets/images/open-message.png">					
 					</a>
 
 				</div>
@@ -89,7 +89,7 @@
 			<h2>Brokerage Applications</h2>
 			<div class="brokerage-item">
 				<div class="broker-logo">
-					<img src="../../../../assets/images/posb.png">
+					<img src="/assets/images/posb.png">
 
 				</div>
 				<div class="detail">
@@ -99,7 +99,7 @@
 			</div>
 			<div class="brokerage-item">
 				<div class="broker-logo">
-					<img src="../../../../assets/images/unionbank.png">
+					<img src="/assets/images/unionbank.png">
 
 				</div>
 				<div class="detail">
@@ -109,7 +109,7 @@
 			</div>
 			<div class="brokerage-item">
 				<div class="broker-logo">
-					<img src="../../../../assets/images/hdfc.png">
+					<img src="/assets/images/hdfc.png">
 
 				</div>
 				<div class="detail">
@@ -126,7 +126,7 @@
 			<h2>Brokerage Application Request</h2>
 			<div class="appointments-container">
 				<div class="appointment">
-					<img src="../../../../assets/images/alvaro.png" style="height: 40px; width:40px;">			
+					<img src="/assets/images/alvaro.png" style="height: 40px; width:40px;">			
 					<div class="detail">
 						<div style="font-size: 14px;">Alvaro Carreras</div>
 						<div style="margin-top: 3px;opacity: 0.4;">3 Days Ago</div>
@@ -134,7 +134,7 @@
 					</div>		
 				</div>				
 				<div class="appointment">
-					<img src="../../../../assets/images/alvaro.png" style="height: 40px; width:40px;">			
+					<img src="/assets/images/alvaro.png" style="height: 40px; width:40px;">			
 					<div class="detail">
 						<div style="font-size: 14px;">Tobia Crivellari</div>
 						<div style="margin-top: 3px;opacity: 0.4;">3 Days Ago</div>
@@ -142,7 +142,7 @@
 					</div>		
 				</div>				
 				<div class="appointment">
-					<img src="../../../../assets/images/alvaro.png" style="height: 40px; width:40px;">			
+					<img src="/assets/images/alvaro.png" style="height: 40px; width:40px;">			
 					<div class="detail">
 						<div style="font-size: 14px;">Tobia Crivellari</div>
 						<div style="margin-top: 3px;opacity: 0.4;">3 Days Ago</div>
@@ -150,7 +150,7 @@
 					</div>		
 				</div>				
 				<div class="appointment">
-					<img src="../../../../assets/images/alvaro.png" style="height: 40px; width:40px;">			
+					<img src="/assets/images/alvaro.png" style="height: 40px; width:40px;">			
 					<div class="detail">
 						<div style="font-size: 14px;">Eugene Zaretskiy</div>
 						<div style="margin-top: 3px;opacity: 0.4;">3 Days Ago</div>
@@ -158,7 +158,7 @@
 					</div>		
 				</div>				
 				<div class="appointment">
-					<img src="../../../../assets/images/alvaro.png" style="height: 40px; width:40px;">			
+					<img src="/assets/images/alvaro.png" style="height: 40px; width:40px;">			
 					<div class="detail">
 						<div style="font-size: 14px;">Soheil Behnezhad</div>
 						<div style="margin-top: 3px;opacity: 0.4;">3 Days Ago</div>
@@ -166,7 +166,7 @@
 					</div>		
 				</div>				
 				<div class="appointment">
-					<img src="../../../../assets/images/alvaro.png" style="height: 40px; width:40px;">			
+					<img src="/assets/images/alvaro.png" style="height: 40px; width:40px;">			
 					<div class="detail">
 						<div style="font-size: 14px;">Soheil Behnezhad</div>
 						<div style="margin-top: 3px;opacity: 0.4;">3 Days Ago</div>
@@ -178,7 +178,7 @@
 		<div class="messages">
 			<h2>New Messages</h2>
 			<div style="background-color: #f2f6f8;" class="message">
-				<img style="height:50px;padding-right: 20px;" src="../../../../assets/images/standard-chartered.png">
+				<img style="height:50px;padding-right: 20px;" src="/assets/images/standard-chartered.png">
 				<div class="detail">
 					<div style="font-size: 14px; margin-bottom: 10px;">Standard Chartered Bank</div>
 					<div style="opacity: 0.4;font-size: 14px; line-height: 25px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius tempor act incididunt ut labore et dolore magna enim ad ...</div>
@@ -186,13 +186,13 @@
 				<div class="time">
 					<div style="white-space: nowrap;padding-right: 10px">2hrs Ago</div>
 					<a ui-sref="main.messages" style="text-decoration: none;cursor: pointer;">
-						<img src="../../../../assets/images/open-message.png">					
+						<img src="/assets/images/open-message.png">					
 					</a>
 
 				</div>
 			</div>
 			<div class="message">
-				<img style="height:50px;padding-right: 20px;" src="../../../../assets/images/standard-chartered.png">
+				<img style="height:50px;padding-right: 20px;" src="/assets/images/standard-chartered.png">
 				<div class="detail">
 					<div style="font-size: 14px; margin-bottom: 10px;">Standard Chartered Bank</div>
 					<div style="opacity: 0.4;font-size: 14px; line-height: 25px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius tempor act incididunt ut labore et dolore magna enim ad ...</div>
@@ -200,13 +200,13 @@
 				<div class="time">
 					<div style="white-space: nowrap;padding-right: 10px">2hrs Ago</div>
 					<a ui-sref="main.messages" style="text-decoration: none;cursor: pointer;">
-						<img src="../../../../assets/images/open-message.png">					
+						<img src="/assets/images/open-message.png">					
 					</a>
 
 				</div>
 			</div>
 			<div class="message">
-				<img style="height:50px;padding-right: 20px;" src="../../../../assets/images/standard-chartered.png">
+				<img style="height:50px;padding-right: 20px;" src="/assets/images/standard-chartered.png">
 				<div class="detail">
 					<div style="font-size: 14px; margin-bottom: 10px;">Standard Chartered Bank</div>
 					<div style="opacity: 0.4;font-size: 14px; line-height: 25px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius tempor act incididunt ut labore et dolore magna enim ad ...</div>
@@ -214,13 +214,13 @@
 				<div class="time">
 					<div style="white-space: nowrap;padding-right: 10px">2hrs Ago</div>
 					<a ui-sref="main.messages" style="text-decoration: none;cursor: pointer;">
-						<img src="../../../../assets/images/open-message.png">					
+						<img src="/assets/images/open-message.png">					
 					</a>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div class="right">
-		<img src="../../../../assets/images/broker-dashboard-background.png">
+		<img src="/assets/images/broker-dashboard-background.png">
 	</div>
 </div>
