--- a/src/app/components/main/navigation/navigation.html
+++ b/src/app/components/main/navigation/navigation.html
@@ -4,7 +4,7 @@
 		<img class="logo" src="/assets/images/white-logo.png" alt="">		
 		<img class="logo-min" src="/assets/images/white-logo-min.png" alt="">		
 	</div>
-	<a ng-if="ifBroker" ui-sref-active="active" ui-sref="main.dashboard">
+	<a ui-sref-active="active" ui-sref="main.dashboard">
 		<img class="icon" src="/assets/images/dashboard.png" alt="">
 		<img class="icon-active" src="/assets/images/dashboard-active.png" alt="">
 		Dashboard
