--- a/src/app/components/main/navigation/navigation.html
+++ b/src/app/components/main/navigation/navigation.html
@@ -9,15 +9,10 @@
 		<img class="icon-active" src="/assets/images/dashboard-active.png" alt="">
 		Dashboard
 	</a>
-	<a ng-if="!ifBroker" ui-sref-active="active" ui-sref="main.brokerage" class="{{!ifBroker}}">
+	<a ui-sref-active="active" ui-sref="main.brokerage" class="{{!ifBroker}}">
 		<img class="icon" src="/assets/images/brokerage.png" alt="">
 		<img class="icon-active" src="/assets/images/brokerage-active.png" alt="">
-		Brokerage
-	</a>
-	<a ng-if="ifBroker" ui-sref-active="active" ui-sref="main.requests" class="{{ifBroker}}">
-		<img class="icon" src="/assets/images/brokerage.png" alt="">
-		<img class="icon-active" src="/assets/images/brokerage-active.png" alt="">
-		Requests
+		<span ng-if="!ifBroker">Brokerage</span><span ng-if="ifBroker">Requests</span>
 	</a>
 	<a ui-sref-active="active" ui-sref="main.messages">
 		<img class="icon" src="/assets/images/messages.png" alt="">
