Fixing build error

--- a/src/app/components/main/dashboard/dashboard.html
+++ b/src/app/components/main/dashboard/dashboard.html
@@ -120,7 +120,7 @@
 		</div>
 	</div>
 </div>
-<div ng-show="vm.ifBroker && vm.userAppointments" class="broker-dashboard-area">
+<div ng-show="vm.ifBroker" class="broker-dashboard-area">
 	<div class="left">
 		<div class="appointments">
 			<h2>Brokerage Application Request</h2>
