--- a/src/app/components/main/dashboard/dashboard.scss
+++ b/src/app/components/main/dashboard/dashboard.scss
@@ -105,10 +105,10 @@
         .statistics{
             display: flex;
             margin: 40px;
-            flex-grow: 1;
             border-bottom: 2px solid rgba(231,236,241,0.3);
             margin-top: 20px;  
-            flex-flow: column;          
+            flex-flow: column; 
+            padding-bottom:20px;         
         }
         .brokerage {
             display: flex;
