--- a/src/app/components/main/documents/document.html
+++ b/src/app/components/main/documents/document.html
@@ -14,7 +14,7 @@
 	</div>
 	<div class="document-action" ngf-drag-over-class="'dragover'" ngf-drop="upload($file)">
 		<span>Drag and drop your file here or 
-		<md-button ngf-select="upload($file)" class="md-primary md-raised" style="background-color: #3598DB">Upload</md-button>
+		<md-button ngf-select="upload($file, document.documentType)" class="md-primary md-raised" style="background-color: #3598DB">Upload</md-button>
  		</span>
 	</div>
 </div>
