--- a/src/app/components/main/documents/document.html
+++ b/src/app/components/main/documents/document.html
@@ -12,7 +12,7 @@
 			<span>{{ document.comment || 'Lorem ipsum dorum sit amet, consectuter' }}</span>
 		</div>
 	</div>
-	<div class="document-action" ngf-drag-over-class="'dragover'" ngf-drop="upload($file)">
+	<div class="document-action" ngf-drag-over-class="'dragover'" ngf-drop="upload($file, document.documentType)">
 		<span>Drag and drop your file here or 
 		<md-button ngf-select="upload($file, document.documentType)" class="md-primary md-raised" style="background-color: #3598DB">Upload</md-button>
  		</span>
