--- a/src/app/components/main/documents/document.scss
+++ b/src/app/components/main/documents/document.scss
@@ -71,10 +71,26 @@ $pale-grey: #e7ecf1;
     border: 5px dashed blue;
 }
 
-.document-preview {
-  width: 800px;
-  height: 112px;
+.crop-suggestion {
+  //width: 800px;
+  height: 50px;
+  display: flex;
+  flex-flow: column;
+  text-align: center;
+  align-items: center;
   border-radius: 5px;
   background-color: #f5f9fa;
   border: solid 1px $pale-grey;
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  text-align: center;
+}
+
+.cropArea {
+  background: #E4E4E4;
+  overflow: hidden;
+  height:350px;
 }
