--- a/src/app/components/main/documents/document_crop.html
+++ b/src/app/components/main/documents/document_crop.html
@@ -1,4 +1,4 @@
-<div style="width: 800px; height: 700px; border-radius: 5px; background-color: #f5f9fa"
+<div style="width: 800px; border-radius: 5px; background-color: #f5f9fa"
 	ngf-drop ng-model="vm.picFile" ngf-pattern="image/*">
 <!-- 	<img style="max-width:100%;max-height:100%;vertical-align: middle;" ng-src="{{vm.picFile | ngfDataUrl}}" result-image="croppedDataUrl" ng-init="croppedDataUrl=''">
 	</img> -->
