Making messages as routes

--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -1,6 +1,6 @@
 <div layout="row" class="mainArea">
-    <md-stepper id="stepper-demo" md-linear="!ifBroker">
-        <!-- <div ng-if="ifBroker">
+    <md-stepper id="stepper-demo" md-linear="!isBroker">
+        <!-- <div ng-if="isBroker">
         <md-step md-label="Account Summary">
             <md-step-body>
             </md-step-body>
