--- a/src/app/components/main/main.scss
+++ b/src/app/components/main/main.scss
@@ -14,6 +14,7 @@
 		&>.display-area {
 			flex-grow: 1;
 			width: 100%;
+			height:calc(100% - 70px);
 			display: flex;
 			flex-flow: column;
 		}
