--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -11,41 +11,20 @@
         <md-step md-label="Select Broker">
             <md-step-body layout="row" layout-wrap>
                 <h3 class="partnersHeader">Premium Partners</h3>
-                <div class="partnerLogo">
-                    <img class="premiereIcon" src="/assets/images/premiere.png"/>
-                    <center><img src="/assets/images/partnerLogos/posb.png"/></center>
+                <div ng-repeat="partner in ::vm.partners | filter:{type:'premium'}">
+                    <div class="partnerLogo" ng-click="vm.toggleSelected(partner)" ng-class="{'selected': partner.selected }">
+                        <img class="premiereIcon" src="/assets/images/premiere.png"/>
+                        <center><img ng-src="{{partner.img}}"/></center>
+                    </div>
                 </div>
-                <div class="partnerLogo">
-                    <img class="premiereIcon" src="/assets/images/premiere.png"/>
-                    <center><img src="/assets/images/partnerLogos/dbs.png"/></center>
-                </div>
-                <div class="partnerLogo">
-                    <img class="premiereIcon" src="/assets/images/premiere.png"/>
-                    <center><img src="/assets/images/partnerLogos/uob.png"/></center>
-                </div>
-                <div class="partnerLogo">
-                    <img class="premiereIcon" src="/assets/images/premiere.png"/>
-                    <center><img src="/assets/images/partnerLogos/icici.png"/></center>
-                </div>
+
                 <h3 class="partnersHeader">All Partners</h3>
-                <div class="partnerLogo">
-                    <center><img src="/assets/images/partnerLogos/citibank.png"/></center>
+                <div ng-repeat="partner in ::vm.partners | filter:{type:'normal'}">
+                    <div class="partnerLogo" ng-click="vm.toggleSelected(partner)" ng-class="{'selected': partner.selected }">
+                    <center><img ng-src="{{partner.img}}"/></center>
+                    </div>
                 </div>
-                <div class="partnerLogo">
-                    <center><img src="/assets/images/partnerLogos/boa.png"/></center>
-                </div>
-                <div class="partnerLogo">
-                    <center><img src="/assets/images/partnerLogos/schartered.png"/></center>
-                </div>
-                <div class="partnerLogo">
-                    <center><img src="/assets/images/partnerLogos/axisbank.png"/></center>
-                </div>
-                <div class="partnerLogo">
-                    <center><img src="/assets/images/partnerLogos/hdfc.png"/></center>
-                </div>
-                <div class="partnerLogo">
-                    <center><img src="/assets/images/partnerLogos/uob.png"/></center>
-                </div>
+
             </md-step-body>
         </md-step>
         </div>
