Fixed bug in css

--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -180,6 +180,7 @@ md-event-calendar .md-event-calendar-cell-event.book-appointment {
 .partnerLogo:focus {
   	outline: none;
 	border: 0;
+	border: solid 1px #e7ecf1;
   	//border: solid 2px #3aafa5;
  }
 
