--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -1,4 +1,19 @@
 <div layout="row" class="mainArea">
+    <div class="contactedUsers" ng-if="ifBroker">
+        <div class="contactedUsersTitle">Contacted Users</div>
+        <div>
+            <input name="search" ng-model="username" type="search" placeholder="Search" class="searchBar">
+        </div>
+        <div class="appointment ng-scope" ng-class='{active: $index==vm.selectedIndex}' ng-repeat="appointment in vm.userAppointments">
+            <img src="/assets/images/alvaro.png" style="height: 40px; width:40px;">         
+            <div class="detail">
+                <div style="font-size: 14px;" class="ng-binding">{{appointment.fname}} {{appointment.lname}}</div>
+                <!-- <div style="margin-top: 3px;opacity: 0.4;">3 Days Ago</div> -->
+                <a class="pending-btn ng-binding" style="margin-top: 4px;">{{appointment.applicationStatus}}</a>
+            </div>      
+        </div>
+    </div>
+    <div flex layout="row">
     <md-stepper id="stepper-demo" md-linear="!ifBroker">
         <div ng-if="ifBroker">
         <md-step md-label="Account Summary">
@@ -328,10 +343,15 @@
     </md-stepper>
 
     <footer>
-        <div layout="row" class="footerBtns" layout-align="start center">
+        <div layout="row" class="footerBtns" layout-align="start center" ng-if="!ifBroker">
             <md-button class="md-raised md-back" ng-click="vm.backStep()">Back</md-button>
             <md-button class="md-raised md-success" ng-click="vm.nextStep()">Next</md-button>
             <!-- <md-button class="md-raised md-edit-form" ng-click="vm.editForm()">Edit Form</md-button> -->
         </div>
+        <div layout="row" class="footerBtns" layout-align="start center" ng-if="ifBroker">
+            <md-button class="md-raised md-success" ng-click="vm.nextStep()">Accept</md-button>
+        </div>
+
     </footer>
+    </div>
 </div>
