--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -180,3 +180,60 @@ md-event-calendar .md-event-calendar-cell-event.book-appointment {
 .partnerLogo:hover {
    border : solid 2px #3aafa5; 
 }
+
+.contactedUsers {
+	width: 250px;
+	height: calc(100vh-57px);
+	background-color: #f9fbfc;
+}
+
+
+.contactedUsersTitle {
+  line-height: 19px;
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  color: #4f6379;
+  margin-top: 24px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.searchBar {
+    margin-top: 21px;
+    height: 35px;
+    width: 220px;
+	margin-left: 14px;
+	margin-right: 15px;
+}
+
+.appointment {
+    display: flex;
+    padding: 15px;
+    margin-top: 20px; 
+    width: 100%;
+    .detail {
+        display: flex;
+        flex-flow: column;
+        margin-left: 10px;
+    }
+    .pending-btn {
+        padding: 5px 18px;
+        text-transform: uppercase;
+        border: 1px solid #57c3ea;
+        color: #57c3ea;
+        border-radius: 3px;
+        font-size: 12px;
+        cursor: pointer;
+    }
+}
+.appointment.active {
+	background-image: linear-gradient(to bottom, #4a86a9, #15736b);
+	color: #fff;
+	.pending-btn {
+		border-color: #fff;
+		color: #fff;
+	}
+}
