--- a/src/app/components/main/dashboard/dashboard.html
+++ b/src/app/components/main/dashboard/dashboard.html
@@ -42,7 +42,7 @@
 				</div>
 				<div class="time">
 					<div style="white-space: nowrap;padding-right: 10px" am-time-ago="message.messageDate | amParse:'YYYY-MM-DD'"></div>
-					<a style="text-decoration: none;cursor: pointer;">
+					<a style="text-decoration: none;cursor: pointer;" ng-click="vm.openMessage(message)">
 						<img src="/assets/images/open-message.png">					
 					</a>
 				</div>
