--- a/src/app/components/main/messages/messages.html
+++ b/src/app/components/main/messages/messages.html
@@ -4,12 +4,12 @@
 			<a ui-sref-active="active" class="left-btn" ui-sref="main.messages.inbox"> Inbox </a>
 			<a ui-sref-active="active" class="center-btn" ui-sref="main.messages.sent"> Sent </a>	
 			<a ui-sref-active="active" class="right-btn"> Draft </a>	
-			<img src="/assets/images/refresh.png" alt="" class="refresh">
+			<img src="/assets/images/refresh.png" alt="Refresh" class="refresh" ng-click="vm.refresh()">
 		</div>
 		<div ui-view>
 		</div>
 	</div>
-	<div class="right">
+	<div ng-if="messageView.activeMessage" class="right">
 		
 	</div>
 </div>
