--- a/src/app/components/main/messages/messages.scss
+++ b/src/app/components/main/messages/messages.scss
@@ -13,6 +13,7 @@
 			.refresh {
 				margin-left: 15px;
 				cursor: pointer;
+				outline: none;
 			}
 			.left-btn,.right-btn,.center-btn {
 				display: flex;
