--- a/src/app/components/main/documents/document_preview.html
+++ b/src/app/components/main/documents/document_preview.html
@@ -1,7 +1,10 @@
 <div style="width: 800px; height: 700px; border-radius: 5px; background-color: #f5f9fa"
-	ngf-drop ng-model="vm.picFile" ngf-pattern="image/*" class="cropArea">
-	<img style="max-width:100%;max-height:100%;vertical-align: middle;" ng-src="{{vm.picFile | ngfDataUrl}}" result-image="croppedDataUrl" ng-init="croppedDataUrl=''">
-	</img>
+	ngf-drop ng-model="vm.picFile" ngf-pattern="image/*">
+<!-- 	<img style="max-width:100%;max-height:100%;vertical-align: middle;" ng-src="{{vm.picFile | ngfDataUrl}}" result-image="croppedDataUrl" ng-init="croppedDataUrl=''">
+	</img> -->
+	<div class="cropArea">
+	<ui-cropper image="vm.picFile" area-type="rectangle" result-image="vm.croppedImage"></ui-cropper>
+	</div>
 
 	<div class="document-preview">
 		Fit inside document screen.
