--- a/src/app/components/main/messages/messages.scss
+++ b/src/app/components/main/messages/messages.scss
@@ -45,6 +45,7 @@
                 border-bottom-left-radius: 0;
                 border-left: 5px solid #3498db;
                 padding-bottom: 10px;
+                max-width: 800px;
                 .detail {
                 	flex-grow: 1;
                 }
@@ -65,5 +66,17 @@
 		flex-flow: column;
 		width: 576px;
 		background: #f2f6f8;
+		padding: 30px;
+		position: relative;
+		.close {
+			position: absolute;
+			right: 30px;
+			top: 30px;
+			cursor: pointer;
+
+		}
+		.message {
+			display: flex;
+		}
 	}
 }
