--- a/src/app/components/main/messages/sent.html
+++ b/src/app/components/main/messages/sent.html
@@ -1,5 +1,5 @@
 <div class="inbox">
-	<div class="message" ng-repeat="message in vm.messages">
+	<div ng-class="{message: true, active:messageView.activeSentMessage.messageId == message.messageId}" ng-repeat="message in vm.messages">
 		<img style="height:50px;padding-right: 20px;" src="/assets/images/standard-chartered.png">
 		<div class="detail">
 			<div>{{message.messageSubject}}</div>
@@ -9,9 +9,8 @@
 		<div class="time">
 			<div style="white-space: nowrap;padding-right: 10px" am-time-ago="message.messageDate | amParse:'YYYY-MM-DD'"></div>
 			<a style="text-decoration: none;cursor: pointer;">
-				<img src="/assets/images/open-message.png">					
+				<img src="/assets/images/open-message.png" style="outline: none;" ng-click="vm.openMessage(message)">					
 			</a>
-
 		</div>
 	</div>
 </div>
