Adding messages to broker dashboard

--- a/src/app/components/main/dashboard/dashboard.scss
+++ b/src/app/components/main/dashboard/dashboard.scss
@@ -216,6 +216,9 @@
                     font-size: 14px;
                     opacity: 0.4;
                 }
+                .detail {
+                    flex-grow: 1;
+                }
             }
         }
 
