Added document toggle functionality

--- a/src/app/components/main/documents/document.html
+++ b/src/app/components/main/documents/document.html
@@ -12,9 +12,15 @@
 			<span>{{ document.comment || 'Lorem ipsum dorum sit amet, consectuter' }}</span>
 		</div>
 	</div>
-	<div class="document-action" ngf-drag-over-class="'dragover'" ngf-drop="upload($file, document)">
+	<div class="document-action" ng-if="!document.documentID || document.replaceAction" ngf-drag-over-class="'dragover'" ngf-drop="upload($file, document)">
 		<span>Drag and drop your file here or 
-		<md-button ngf-select="upload($file, document)" class="md-primary md-raised" style="background-color: #3598DB">Upload</md-button>
+		<md-button ngf-select="upload($file, document)" class="md-primary md-raised" style="background-color: #3598DB">	Upload
+		</md-button>
  		</span>
+	</div>
+	<div class="document-action" ng-if="document.documentID && !document.replaceAction">
+		<div style="width: 50%">View</div>
+		<div style="width: 2px; border: solid 1px #e7ecf1;"></div>
+		<div style="width: 50%" ng-click="vm.replace(document)">Replace</div>
 	</div>
 </div>
