--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -117,18 +117,18 @@
                             </md-input-container>
                             <md-input-container class="md-block" flex="100" flex-offset="10" style="float:left;">
                                 <label>Residence Phone</label>
-                                <input required ng-model="user.phoneNum" minlength="6" maxlength="100">
+                                <input required ng-model="vm.questionsmap.residential_phone.answerText" minlength="6" maxlength="100">
                             </md-input-container>
 
                         </div>
                         <div flex="50" class="col" style="margin-right:30px;">
                             <md-input-container style="margin-left: -16px;margin-top: 0px;">
                                 <label>Date of Birth</label>
-                                <md-datepicker ng-model="user.bdayDate"></md-datepicker>
+                                <md-datepicker ng-model="vm.questionsmap.user_dob.answerText"></md-datepicker>
                             </md-input-container>
                             <md-input-container class="md-block" flex-gt-sm>
                                 <label>Nationality</label>
-                                <md-select ng-model="country">
+                                <md-select ng-model="vm.questionsmap.nationality.answerText">
                                     <md-option><em>Singapore</em></md-option>
                                     <md-option ng-repeat="country in vm.countries" ng-value="country.name">
                                         {{country.name}}
@@ -142,13 +142,13 @@
                         <div flex="50" class="col" style="margin-left:30px;">
                             <md-input-container class="md-block">
                                 <label>Residential Address</label>
-                                <textarea ng-model='user.resaddress' rows="2"></textarea>
+                                <textarea ng-model='vm.questionsmap.residential_address.answerText' rows="2"></textarea>
                             </md-input-container>
                         </div>
                         <div flex="50" class="col" style="margin-right:30px;">
                             <md-input-container class="md-block">
                                 <label>Mailing Address</label>
-                                <textarea ng-model='user.mailaddress' rows="2"></textarea>
+                                <textarea ng-model='vm.questionsmap.mailing_address.answerText' rows="2"></textarea>
                             </md-input-container>
                         </div>
                     </div>
@@ -157,13 +157,13 @@
                         <div flex="50" class="col" style="margin-left:30px;">
                             <md-input-container class="md-block">
                                 <label>Passport Number</label>
-                                <input required ng-model="user.passportnum" minlength="6" maxlength="100">
+                                <input required ng-model="vm.questionsmap.passport_nric.answerText" minlength="6" maxlength="100">
                             </md-input-container>
                         </div>
                         <div flex="50" class="col" style="margin-right:30px;">
                             <md-input-container class="md-block">
                                 <label>Employment Status</label>
-                                <md-select ng-model="empstatus">
+                                <md-select ng-model="vm.questionsmap.employment_status.answerId">
                                     <md-option ng-repeat="empstatus in vm.empStatuses" ng-value="empstatus.name">
                                         {{empstatus.name}}
                                     </md-option>
