--- a/src/app/components/main/dashboard/dashboard.scss
+++ b/src/app/components/main/dashboard/dashboard.scss
@@ -204,6 +204,7 @@
                 display: flex;
                 padding: 30px;
                 padding-right: 20px;
+                padding-bottom: 10px;
                 margin-top: 20px;
                 border: 1px solid #e7ecf1;
                 border-radius: 5px;
@@ -226,7 +227,35 @@
     .right {
         display: flex;
         flex-flow: column;
-        flex-basis: 360px;
+        flex-basis: 260px;
         overflow: hidden;
+        position:relative;
+        .appointments {
+            z-index: 1;
+            display: flex;
+            flex-flow: column;
+            padding: 10px;
+            .appointment {
+                background-color: #fff;
+                border-radius: 5px;
+                .detail {
+                    display: flex;
+                    flex-flow: column;
+                    align-items: flex-start;
+                    margin-left: 10px
+                }
+                .conference-btn {
+                    font-size: 12px;
+                    padding: 6px 18px;
+                    text-transform: uppercase;
+                    border-radius: 3px;
+                    background-color: #57c3ea;
+                    color: #fff;
+                    cursor: pointer;
+                    margin-top: 6px;
+                }
+
+            }
+        }
     }
 }
