--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -274,3 +274,31 @@ md-event-calendar .md-event-calendar-cell-event.book-appointment {
 		font-size: 14px;
 	}
 }
+
+.accSummary {
+	.title {
+		font-size: 16px;
+		font-weight: 500;
+		color: #4f6379;
+		line-height: 24px;
+	}
+	.documentTile {
+		border: solid 1px #e7ecf1;
+		overflow: hidden;
+	    padding: 20px;
+	    color: #4f6379;
+	    font-size: 14px;
+	    margin-top: 15px;
+		img {
+			height: 30px;
+			opacity: 0.4;
+		}
+		.header {
+			font-size: 16px;
+			line-height: 20px;
+		}
+		.description {
+			opacity: 0.4;
+		}
+	}
+}
